- Removed ~alabaster-themes-rotate~ command and ~alabaster-themes-to-rotate~ variable to streamline package functionality
- Removed ~alabaster-themes-list-colors-current~ command and ~alabaster-themes-preview-colors-current~ alias to streamline package functionality
- Removed ~alabaster-themes-preview-colors~ alias to streamline package functionality

** New Features
- Added ~alabaster-themes-no-bold~ customization option to disable bold font variations
- Theme now respects original Alabaster philosophy when ~alabaster-themes-no-bold~ is set to t
- All 85+ bold face definitions now conditionally apply bold based on user preference

** Cleanup
- Removed ~alabaster-common.el~ deadcode file (colors are now defined in theme palettes)
- Removed obsolete test cases referencing removed color variables

* Version 1.0.0 (2025-11-11)

** Major Refactoring

This release represents a complete rewrite of the alabaster-emacs package to align with modern Emacs theme best practices, inspired by the ef-themes framework.

** New Features

*** Theme Framework
- Implemented ~alabaster-themes-theme~ macro for consistent theme structure
- Added semantic palette system with color mappings and overrides
- Centralized all face definitions in ~alabaster-themes.el~
- Themes are now data (palette + optional overrides)

*** User Commands
- ~alabaster-themes-select~ - Interactive theme selection with annotations
- ~alabaster-themes-list-colors~ - Preview palette in tabulated list

*** Customization Options
- ~alabaster-themes-headings~ - Per-level heading styles with variable-pitch, weights, heights
- ~alabaster-themes-mixed-fonts~ - Monospace-sensitive constructs
- ~alabaster-themes-variable-pitch-ui~ - Proportional fonts in UI
- ~alabaster-themes-common-palette-overrides~ - Global palette overrides
- Per-theme ~*-palette-overrides~ - Individual theme overrides
- Font weight system (thin to ultrabold)

*** Expanded Face Coverage
- 500+ face definitions (was ~40)